<resources>
    <string name="app_name">Stopwatch</string>
    <string name="app_nickname">Stopwatch ⏱️</string>
    <string name="default_timer">0:00:00</string>
    <string name="start_btn">▶️ Пуск</string>
    <string name="pause_btn">⏸️ Пауза</string>
    <string name="reset_btn">🔄 Сброс</string>
    <string name="sound_switch">Звук</string>
    <string name="vibration_switch">Вибрация</string>
    <string name="apply_btn">✅ Применить</string>
    <string name="deny_btn">❌ Отмена</string>
    <string name="settings_btn">⚙️ Настройки</string>
</resources>